Temperature part done
Working on expenses starts

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,3 +12,11 @@
 .btn-temp-past {
     margin-top: 6%;
 }
+
+label.col-sm-1 {
+    padding-top: 0.5%;
+}
+
+.frm-search-pt {
+    padding-top: 2.5%;
+}
